--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,12 +4,13 @@
 # Sets the minimum version of CMake required to build the native library.
 
 cmake_minimum_required(VERSION 3.4.1)
+set("OPENCV_DIR" C:/OpenCV-android-sdk)
 
-add_library(my-opencv-lib SHARED D:/StudioProjects/NetVision/app/src/main/cpp/com_netvirta_netvision_OpencvNativeClass.cpp)
+add_library(my-opencv-lib SHARED ${PROJECT_SOURCE_DIR}/src/main/cpp/com_netvirta_netvision_OpencvNativeClass.cpp)
 
 set(CMAKE_VERBOSE_MAKEFILE on)
 add_library(lib_opencv SHARED IMPORTED)
-set_target_properties(lib_opencv PROPERTIES IMPORTED_LOCATION D:/StudioProjects/NetVision/openCVLibrary343/src/main/jniLibs/${ANDROID_ABI}/libopencv_java3.so)
+set_target_properties(lib_opencv PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/src/main/jniLibs/${ANDROID_ABI}/libopencv_java3.so)
 
 find_library( # Sets the name of the path variable.
         log-lib
@@ -25,5 +26,4 @@ target_link_libraries( # Specifies the target library.
         # included in the NDK.
         ${log-lib})
 
-include_directories(C:/OpenCV-android-sdk/sdk/native/jni/include)
-include_directories(C:/OpenCV-android-sdk/sdk/native/staticlibs)
+include_directories(${OPENCV_DIR}/sdk/native/jni/include)
